# XDHacks-Mini-Backend

./: README.md  db.sqlite3  main.py  pyproject.toml  wtf.py
static/css/: createlist.css  listing.css  style.css
templates/: About.html  Create.html  FAQ.html  Listing.html  index.html  test.html
