[tool.poetry]
name = "xdhacks-mini-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyrebase = "^3.0"
flask = "^1.1"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.3"
wtforms = "^2.3"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
